	* #1967: Fix unhandled IndexError when trying to open a non-json conf file
	* Fix setting daemon listen interface from command line
	* #2021: Fix share ratio limit not obeyed for seeded torrents added to session
	* Add optparse custom version to prevent unnecessary loading of libtorrent
	* #1554: Fix seeding on share ratio failing for partially selected torrents

==== GtkUI ====
	* #1918: Fix Drag'n'Drop not working in Windows
	* #1941: Increase maximum Cache Size to 999999 (15GiB)
	* #1940: File & folder renaming issue when using Add Torrent dialog in Windows
	* LP#821577: Fix UnpicklingError when external selection dragged onto Files Tab
	* #1934: Fix Unicode error in AddTorrent Dialog
	* #1957: Fix keyerror when adding columns for non-latin languages
	* #1969: Fix menu item 'Quit & Shutdown' still available when not connected to daemon
	* #1895: Fix Files Tab showing wrong files due to torrent_info race condition
	* #2010: Move speed text in titlebar to the beginning
	* #2032: Wait for client to shutdown/disconnect before stopping reactor
	* Fix compatibility with Python 2.5
	* Fix collapsed treeview in Create Torrent dialog
	* Ignore unmaximise event when window isn't visible
	* #1976: Fixed text entry with trailing newline characters causing issues for Move Storage

==== WebUI ====
	* Fix Webui files-tab menu setting wrong priority
	* Update to ExtJS 3.4.0
	* #1960: Fix statustab showing total_payload_download for upload as well
	* Remove uneeded Titlebar to save space
	* Fix clipped Browse button in WebUI
	* #1915: Fix being unable to stop the status bar from autohiding
	* Fix password box focus issue in Firefox
	* Fix plugin uploads from behind a reverse proxy
	* #2010: Move speed text in titlebar to the beginning
	* #1936: Fix Referenced before assignment error in json_api
	* Changes are now applied when clicking OK in Preferences
	* Added Download,Uploaded,Down Limit, Up Limit & Seeder/Peeds columns
	* Add magnet uri support to Add Url